[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodjango"
description = "Run Django models and views from a single file, and convert it to a full project."
dynamic = ["version"]
authors = [
    { name="Richard Terry", email="code@radiac.net" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["django"]
requires-python = ">=3.10"
dependencies = [
    "click",
    "Django>=5.2",
    "pluggy",
    "whitenoise",
]

[project.optional-dependencies]
api = ["django-ninja"]
serve = ["gunicorn", "uvicorn"]
convert = ["ruff>=0.14.13"]
static = ["django-nanopages", "django-distill"]
all = [
    "nanodjango[api,serve,convert,static]",
]

[project.scripts]
nanodjango = "nanodjango.commands:invoke"

[project.urls]
Homepage = "https://radiac.net/projects/nanodjango/"
Documentation = "https://nanodjango.readthedocs.io/en/latest/"
Changelog = "https://nanodjango.readthedocs.io/en/latest/changelog.html"
Repository = "https://github.com/radiac/nanodjango"
Issues = "https://github.com/radiac/nanodjango/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nanodjango*"]
exclude = ["docs*", "tests*", "examples*", "src*", "dist*"]

[tool.setuptools.dynamic]
version = {attr = "nanodjango.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=nanodjango --cov-report=term --cov-report=html"
testpaths = [
    "tests",
    "nanodjango",
    "examples",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["nanodjango"]

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true

[tool.doc8]
max-line-length = 88
ignore-path = ["*.txt"]

[tool.ruff]
line-length = 88
exclude = [".git", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nanodjango"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[dependency-groups]
dev = ["pytest", "pytest-cov"]
