[metadata]
name = nanodjango
description = Write a Django app in a single file, and convert it to a full project.
long_description = file: README.md
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://radiac.net/projects/nanodjango/
project_urls =
    Documentation = https://github.com/radiac/nanodjango
    Source = https://github.com/radiac/nanodjango
    Tracker = https://github.com/radiacnanodjango/issues

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click
    Django>=3.2

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    nanodjango = nanodjango.commands:invoke

[tool:pytest]
addopts = --cov=nanodjango --cov-report=term --cov-report=html
pythonpath = .

[coverage:run]
parallel=True

[flake8]
ignore = E123,E128,E203,E501,W503
max-line-length = 88
exclude = .git,__pycache__,build,dist,.tox

[isort]
multi_line_output = 3
line_length = 88
known_django = django
known_first_party = nanodjango
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .tox,.git

[mypy]
ignore_missing_imports = True

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox
